--- a/views/front/auth/profil.ejs
+++ b/views/front/auth/profil.ejs
@@ -45,16 +45,19 @@
                             </div>
                         </div>
                         <div style="flex:4">
-                            <h3 class="text-lg font-semibold" style=" text-align: right;"> <span style="text-transform: lowercase; display: inline-block;
-                                text-align: center;
-                                margin: 5px;
-                                border-radius: 100px;
-                                padding: 5px;
-                                text-transform: capitalize;
-                                background-color: #E3F2FD;
-                                border: 1px solid #0091EA;
-                                color: #0D47A1;
-                                text-decoration: none;"> <a href="/hesap">Profili Düzenle</a> </span> </h3>
+                            <h3 class="text-lg font-semibold" style=" text-align: right;"> 
+                                <span style="text-transform: lowercase; display: inline-block;
+                                    text-align: center;
+                                    margin: 5px;
+                                    border-radius: 100px;
+                                    padding: 5px;
+                                    text-transform: capitalize;
+                                    background-color: #E3F2FD;
+                                    border: 1px solid #0091EA;
+                                    color: #0D47A1;
+                                    text-decoration: none;"> <a href="/hesap">Profili Düzenle</a> 
+                                </span> 
+                            </h3>
                         </div>
                     </div>                    
                     <% if (user) { %>
