--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -26,8 +26,21 @@
                         </div>
                         <div style="flex: 4;">
                             <h3 class="text-lg font-semibold" style=" text-align: right;">
-                                <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline">
-                                </ion-icon> | <span style="color: crimson;">ABONE OL</span>
+                                <!-- <ion-icon style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline">
+                                </ion-icon> -->
+                                <h3 class="text-lg font-semibold" style=" text-align: right;"> 
+                                    <span style="text-transform: lowercase; display: inline-block;
+                                        text-align: center;
+                                        margin: 5px;
+                                        border-radius: 100px;
+                                        padding: 5px;
+                                        text-transform: capitalize;
+                                        background-color: #FFCDD2;
+                                        border: 1px solid #C62828;
+                                        color: #B71C1C;
+                                        text-decoration: none;"> <a href="/hesap">Profili Düzenle</a> 
+                                    </span> 
+                                </h3>
                             </h3>
                             </h3>
                         </div>
