--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -60,14 +60,23 @@
                     <div class="p-4 space-y-3">
                         <div class=" py-4 space-y-4 dark:border-" style="width: 100%;">
                             <div style="display: flex; flex-direction: row;">
-                                <div style="flex:8">
+                                <div style="flex:6">
                                     <a href="/profil"><img src="https://via.placeholder.com/200"
                                             style="border-radius: 75px; height: 50px; width: 50px; margin-left: -10px;"></a>
                                 </div>
-                                <div style="flex:4">
-                                    <h3 class="text-lg font-semibold" style="text-align: right; margin-right: -10px;"> <ion-icon
-                                            style="margin-top: -2px;" class="text-2xl" name="chatbubble-outline">
-                                        </ion-icon> | <span style="color: crimson;">ABONE OL</span>
+                                <div style="flex:6">
+                                    <h3 class="text-lg font-semibold" style=" text-align: right;"> 
+                                        <span style="text-transform: lowercase; display: inline-block;
+                                            text-align: center;
+                                            margin: 5px;
+                                            border-radius: 100px;
+                                            padding: 5px;
+                                            text-transform: capitalize;
+                                            background-color: #FFCDD2;
+                                            border: 1px solid #C62828;
+                                            color: #B71C1C;
+                                            text-decoration: none;"> <a href="/hesap">Abone Ol</a> 
+                                        </span> 
                                     </h3>
                                 </div>
                             </div>
