--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -32,6 +32,24 @@
                             </div>
                     </div>
                 <% }) %>
+                
+                <div style="border: 1px solid black;">
+                    <table>
+                        <tr>
+                            <td style="width: 80vw;">
+                            <b>Reklam metni</b>
+                            <br>
+                            <small>X Company</small>
+                            </td>
+                            <td style="width: 20vw;">
+                                <img src="https://via.placeholder.com/200" alt="">
+                            </td>
+                        </tr>
+                    </table>
+                    <div style="width: 100%; background-color:#0091EA;">
+                        <p style="color: white;"><b>LİNKE GİT</b></p>
+                    </div>
+                </div>
             </div>
         </div>
         <a onaclick="medyaKaydet()" style="color: white;" hidden class="bg-blue-600 flex h-9 items-center justify-center rounded-lg text-white px-12 font-semibold">
