--- a/views/front/medya/medya.ejs
+++ b/views/front/medya/medya.ejs
@@ -33,7 +33,7 @@
                     </div>
                 <% }) %>
                 
-                <div style="border: 1px solid black;">
+                <div>
                     <table>
                         <tr>
                             <td style="width: 80vw;">
@@ -46,7 +46,7 @@
                             </td>
                         </tr>
                     </table>
-                    <div style="width: 100%; background-color:#0091EA;">
+                    <div style="width: 100%; background-color:#0091EA; padding:10px">
                         <p style="color: white;"><b>LİNKE GİT</b></p>
                     </div>
                 </div>
