--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -14,7 +14,8 @@
 
         
     </style>
-            <%- include ./part/header.ejs %> 
+    <%- include ./part/header.ejs %>
+    <!-- <%- include ./part/headerflex.ejs %>  -->
 
     <div class="main_content">
         <div class="container">
