--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -75,6 +75,8 @@
             uk-toggle="target: #wrapper ; cls: show-searchbox">
         </div>
     </div>
+    <%- include ./part/footerflex.ejs %> 
+
 </body>
 
 <script>
