--- a/views/front/part/footerflex.ejs
+++ b/views/front/part/footerflex.ejs
@@ -8,17 +8,20 @@
         background-color: white;
         color: white;
         text-align: center;
+        border-top: 1px solid lightgray;
+        border-radius: 20px;
+        padding-top: 10px;
     }
 </style>
 <footer>
     <div style="flex: 2; align-items: center; justify-content: center; ">
-        <img src="../../../front/images/avatars/avatar-2.jpg" style="height: 40px; margin-bottom: 3px; margin-left: 8vw; border-radius: 20px;">
+        <img src="../../../front/images/avatars/avatar-2.jpg" style="height: 40px; margin-bottom: 3px; margin-left: 6vw; border-radius: 20px;">
     </div>
     <div style="flex: 2; align-items: center; justify-content: center;">
         <ion-icon name="camera-outline" style="color: gray;" class="text-4xl"></ion-icon>
     </div>
     <div style="flex: 2; align-items: center; justify-content: center;">
-        <img src="../../../paylas.png" style="height: 40px; padding-left: 8.3vw; padding-bottom: 3px;">
+        <img src="../../../paylas.png" style="height: 40px; padding-left: 8.3vw; margin-bottom: 3px;">
     </div>
     <div style="flex: 2; align-items: center; justify-content: center;">
         <ion-icon name="notifications-outline" style="color: gray;" class="text-4xl"></ion-icon>
