--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -14,8 +14,8 @@
 
         
     </style>
-    <%- include ./part/header.ejs %>
-    <!-- <%- include ./part/headerflex.ejs %>  -->
+
+    <!-- HEADER BURAYA -->
 
     <div class="main_content">
         <div class="container">
