--- a/views/front/part/headerflex.ejs
+++ b/views/front/part/headerflex.ejs
@@ -1,11 +1,12 @@
-<div style="display: flex; flex-direction: row; position: absolute; z-index: 9999999999999999; background-color: white; max-height: 60px; width: 100vw; padding:20px;">
-    <div style="flex:3">
-        <img src="../../../newpan.png" style="height: 40px; width: auto;">
+
+<header style="display: flex; height: 50px; padding-left: 7vw; padding-right: 7vw; padding-top: 10px;">
+    <div style="flex: 2;">
+        <ion-icon name="person-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon>
     </div>
-    <div style="flex:6">
-        Arama
+    <div style="flex: 5">
+        <img src="../../../newpan.png" style="height: 34px; width: auto; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto">
     </div>
-    <div style="flex:1">
-        <i class="fa fa-heart fa-3x"></i>
+    <div style="flex: 2;">
+        <ion-icon name="search-outline" style="color: gray; float: right;" class="text-3xl"></ion-icon>
     </div>
-</div>
+</header>
