--- a/views/front/part/footerflex.ejs
+++ b/views/front/part/footerflex.ejs
@@ -15,13 +15,13 @@
 </style>
 <footer>
     <div style="flex: 2; align-items: center; justify-content: center; ">
-        <img src="../../../front/images/avatars/avatar-2.jpg" style="height: 40px; margin-bottom: 3px; margin-left: 6vw; border-radius: 20px;">
+        <img src="../../../front/images/avatars/avatar-2.jpg" style="height: 33px; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto; border-radius: 20px;">
     </div>
     <div style="flex: 2; align-items: center; justify-content: center;">
         <ion-icon name="camera-outline" style="color: gray;" class="text-4xl"></ion-icon>
     </div>
     <div style="flex: 2; align-items: center; justify-content: center;">
-        <img src="../../../paylas.png" style="height: 40px; padding-left: 7vw; margin-bottom: 3px;">
+        <img src="../../../paylas.png" style="height: 40px; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto">
     </div>
     <div style="flex: 2; align-items: center; justify-content: center;">
         <ion-icon name="notifications-outline" style="color: gray;" class="text-4xl"></ion-icon>
