--- a/views/front/part/headerflex.ejs
+++ b/views/front/part/headerflex.ejs
@@ -1,5 +1,5 @@
 
-<header style="display: flex; height: 50px; padding-left: 7vw; padding-right: 7vw; padding-top: 10px;">
+<header style="display: flex; height: 50px; padding-left: 7vw; padding-right: 7vw; padding-top: 10px; border-radius: 20px;">
     <div style="flex: 2;">
         <ion-icon name="person-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon>
     </div>
