--- a/views/front/part/headerflex.ejs
+++ b/views/front/part/headerflex.ejs
@@ -3,7 +3,7 @@
     <div style="flex: 2;">
         <ion-icon name="person-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon>
     </div>
-    <div style="flex: 5">
+    <div style="flex: 6;">
         <img src="../../../newpan.png" style="height: 34px; width: auto; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto">
     </div>
     <div style="flex: 2;">
