--- a/views/front/part/footerflex.ejs
+++ b/views/front/part/footerflex.ejs
@@ -21,7 +21,7 @@
         <ion-icon name="camera-outline" style="color: gray;" class="text-4xl"></ion-icon>
     </div>
     <div style="flex: 2; align-items: center; justify-content: center;">
-        <img src="../../../paylas.png" style="height: 40px; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto">
+        <img src="../../../paylas.png" style="height: 40px; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto; margin-bottom: 4px;">
     </div>
     <div style="flex: 2; align-items: center; justify-content: center;">
         <ion-icon name="notifications-outline" style="color: gray;" class="text-4xl"></ion-icon>
