--- a/views/front/part/headerflex.ejs
+++ b/views/front/part/headerflex.ejs
@@ -10,7 +10,7 @@
         </div>
     <% } %> 
     <div style="flex: 6;">
-        <img src="../../../newpan.png" style="height: 34px; width: auto; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto">
+        <a href="/"><img src="../../../newpan.png" style="height: 34px; width: auto; top: 0px; bottom: 0px; left: 0px; right: 0px; margin:auto"></a>
     </div>
     <div style="flex: 2;">
         <ion-icon name="search-outline" style="color: gray; float: right;" class="text-3xl" uk-toggle="target: #wrapper ; cls: show-searchbox"></ion-icon>
