--- a/views/front/set/pro.ejs
+++ b/views/front/set/pro.ejs
@@ -7,6 +7,26 @@
            display: none;
        }
    </style>
+
+
+<header style="display: flex; height: 50px; padding-left: 7vw; padding-right: 7vw; padding-top: 10px; border-radius: 20px;">
+    <% if (user) { %>
+        <div style="flex: 1;">
+            <a href="/setting"><ion-icon name="chevron-back-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon></a>
+        </div>
+    <% }else{ %>
+        <div style="flex: 2;">
+            <a href="/users/login"><ion-icon name="person-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon></a>
+        </div>
+    <% } %> 
+    <div style="flex: 15;">
+        <h2 class="text-2xl font-semibold" style="margin-top: 3px;"> Profil Bilgileri<a> </h2>
+    </div>
+    <div style="flex: 2;">
+        <ion-icon name="save-outline" style="color: gray; float: right;" class="text-3xl" uk-toggle="target: #wrapper ; cls: show-searchbox"></ion-icon>
+    </div>
+</header>
+   
     <div class="main_content">
         <div class="mcontainer">
             <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Profil Bilgileri &nbsp &nbsp &nbsp <a> <i class="fa fa-save" onclick="bioyaz()"></i></a> </h2>
