--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -15,7 +15,7 @@
         
     </style>
 
-    <!-- HEADER BURAYA -->
+<%- include ./part/headerflex.ejs  %>
 
     <div class="main_content">
         <div class="container">
