--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -58,7 +58,6 @@
 <body>
     <div id="app">
         <div id="wrapper">
-            <%- include ./part/headerflex.ejs  %> 
             <%- body %>
         </div>
     </div>
@@ -80,7 +79,8 @@
             baglanti : true,
             yorumm : false,
             begenn : false,
-            medya : false
+            medya : false,
+            page:0
         },
         methods: {
             baglac(){
