--- a/views/front/set/baglanti.ejs
+++ b/views/front/set/baglanti.ejs
@@ -2,6 +2,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/fontawesome.min.css"
         integrity="sha512-shT5e46zNSD6lt4dlJHb+7LoUko9QZXTGlmWWx0qjI9UhQrElRb+Q5DM7SVte9G9ZNmovz2qIaV7IWv0xQkBkw=="
         crossorigin="anonymous" />
+        <%- include ../part/headerflex.ejs  %>
+    
     <div class="main_content">
         <div class="mcontainer">
             <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Bağlantılar</h2>
