--- a/views/front/set/guvenlik.ejs
+++ b/views/front/set/guvenlik.ejs
@@ -1,4 +1,5 @@
 <% layout("../layout") %>
+<%- include ../part/headerflex.ejs  %>
     
     <div class="main_content">
         <div class="mcontainer">
