--- a/views/front/set/ista.ejs
+++ b/views/front/set/ista.ejs
@@ -8,6 +8,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cloudinary-core/2.11.3/cloudinary-core.min.js"
     integrity="sha512-JlOhEgkriqAqb9bcQ3ILIQZFjpr7kJHKU9vudBHBulgfc1IgtUtMCK5dX3OyWRFpa1hkz8M4EiuY0ut5vMgAVg=="
     crossorigin="anonymous"></script>
+    <%- include ../part/headerflex.ejs  %>
+
   <div class="main_content">
     <div class="mcontainer">
       <span class="badge" style="display: flex; flex-direction: row;">
