--- a/views/front/set/setting.ejs
+++ b/views/front/set/setting.ejs
@@ -1,4 +1,6 @@
 <% layout("../layout") %>
+<%- include ../part/headerflex.ejs  %>
+
     <div class="main_content">
         <div class="mcontainer">
             <span class="badge">
