--- a/views/front/set/pro.ejs
+++ b/views/front/set/pro.ejs
@@ -1,63 +1,85 @@
 <% layout("../layout") %>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/cloudinary-core/2.11.3/cloudinary-core.min.js" integrity="sha512-JlOhEgkriqAqb9bcQ3ILIQZFjpr7kJHKU9vudBHBulgfc1IgtUtMCK5dX3OyWRFpa1hkz8M4EiuY0ut5vMgAVg==" crossorigin="anonymous"></script>
-   <style>
-       header{
-           display: none;
-       }
-   </style>
-
-
-<header style="display: flex; height: 50px; padding-left: 2vw; padding-right: 7vw; padding-top: 10px; border-radius: 20px;">
-    <% if (user) { %>
-        <div style="flex: 1;">
-            <a href="/setting"><ion-icon name="chevron-back-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon></a>
-        </div>
-    <% }else{ %>
-        <div style="flex: 2;">
-            <a href="/users/login"><ion-icon name="person-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon></a>
-        </div>
-    <% } %> 
-    <div style="flex: 15;">
-        <h2 class="text-2xl font-semibold" style="margin-top: 0px;"> Profil Bilgileri<a> </h2>
-    </div>
-    <div style="flex: 2;">
-        <h2 class="text-2xl font-semibold" style="margin-top: 0px; color: steelblue;" onclick="bioyaz()"> Kaydet<a> </h2>
-    </div>
-</header>
-   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
+        integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"
+        integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA=="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cloudinary-core/2.11.3/cloudinary-core.min.js"
+        integrity="sha512-JlOhEgkriqAqb9bcQ3ILIQZFjpr7kJHKU9vudBHBulgfc1IgtUtMCK5dX3OyWRFpa1hkz8M4EiuY0ut5vMgAVg=="
+        crossorigin="anonymous"></script>
+    <style>
+        header {
+            display: none;
+        }
+    </style>
+    <header
+        style="display: flex; height: 50px; padding-left: 2vw; padding-right: 7vw; padding-top: 10px; border-radius: 20px;">
+        <% if (user) { %>
+            <div style="flex: 1;">
+                <a href="/setting">
+                    <ion-icon name="chevron-back-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon>
+                </a>
+            </div>
+            <% }else{ %>
+                <div style="flex: 2;">
+                    <a href="/users/login">
+                        <ion-icon name="person-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon>
+                    </a>
+                </div>
+                <% } %>
+                    <div style="flex: 15;">
+                        <h2 class="text-2xl font-semibold" style="margin-top: 0px;"> Profil Bilgileri<a> </h2>
+                    </div>
+                    <div style="flex: 2;">
+                        <h2 class="text-2xl font-semibold" style="margin-top: 0px; color: steelblue;"
+                            onclick="bioyaz()"> Kaydet<a> </h2>
+                    </div>
+    </header>
     <div class="main_content">
         <div class="mcontainer">
-            <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Profil Bilgileri &nbsp &nbsp &nbsp <a> <i class="fa fa-save" onclick="bioyaz()"></i></a> </h2>
+            <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Profil Bilgileri &nbsp &nbsp &nbsp
+                <a> <i class="fa fa-save" onclick="bioyaz()"></i></a> </h2>
             <div class="profile_avatar_holder image-upload">
                 <label for="file-input">
 
-                <% if (user) { %>
-                    <% if (user.photo == "") { %>
-                        <img id="blah" src="https://www.flaticon.com/svg/vstatic/svg/747/747376.svg?token=exp=1614597537~hmac=bd451b72d38fc070d47d8a313616a864" style="border-radius: 75px; height: 75px; width: 75px; max-height: 75px;
+                    <% if (user) { %>
+                        <% if (user.photo=="" ) { %>
+                            <img id="blah"
+                                src="https://www.flaticon.com/svg/vstatic/svg/747/747376.svg?token=exp=1614597537~hmac=bd451b72d38fc070d47d8a313616a864"
+                                style="border-radius: 75px; height: 75px; width: 75px; max-height: 75px;
                         max-width: 75px; object-fit: cover; border: 1px solid black; padding:2px">
-                        <ion-icon name="camera" class="text-3xl" style="color: white; padding-left: 22px; margin-top: -50px; position: absolute;"></ion-icon>
-                    <% }else{ %>
-                        <img id="blah" src="<%= user.photo %>" style="border-radius: 75px; height: 75px; width: 75px; max-height: 75px;
+                            <ion-icon name="camera" class="text-3xl"
+                                style="color: white; padding-left: 22px; margin-top: -50px; position: absolute;">
+                            </ion-icon>
+                            <% }else{ %>
+                                <img id="blah" src="<%= user.photo %>" style="border-radius: 75px; height: 75px; width: 75px; max-height: 75px;
                         max-width: 75px; object-fit: cover;">
-                        <ion-icon name="camera" class="text-3xl" style="color: white; padding-left: 22px; margin-top: -50px; position: absolute;"></ion-icon>
-                    <% } %> 
-                    <button onclick="kaydet()" id="tikla" style="display: none;">Profili Onayla</button>
-                    <br>
-                    <textarea id="bio" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none" rows="5" rows="10" placeholder="Biyografi giriniz . . . "></textarea>
+                                <ion-icon name="camera" class="text-3xl"
+                                    style="color: white; padding-left: 22px; margin-top: -50px; position: absolute;">
+                                </ion-icon>
+                                <% } %>
+                                    <button onclick="kaydet()" id="tikla" style="display: none;">Profili Onayla</button>
+                                    <br>
+                                    <textarea id="bio"
+                                        class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none"
+                                        rows="5" rows="10" placeholder="Biyografi giriniz . . . "></textarea>
 
-                <% }else{ %>
-                    <img id="blah" src="https://via.placeholder.com/100" style="border-radius: 100px; height: 75px; width: 75px; max-height: 75px;
+                                    <% }else{ %>
+                                        <img id="blah" src="https://via.placeholder.com/100" style="border-radius: 100px; height: 75px; width: 75px; max-height: 75px;
                     max-width: 75px; object-fit: cover;">
-                    <ion-icon name="camera" class="text-3xl" style="color: white; padding-left: 22px; margin-top: -50px; position: absolute;"></ion-icon>
-                    <br>
-                    <textarea id="bio" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none" rows="5" rows="10" placeholder="Biyografi giriniz . . . "></textarea>
+                                        <ion-icon name="camera" class="text-3xl"
+                                            style="color: white; padding-left: 22px; margin-top: -50px; position: absolute;">
+                                        </ion-icon>
+                                        <br>
+                                        <textarea id="bio"
+                                            class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none"
+                                            rows="5" rows="10" placeholder="Biyografi giriniz . . . "></textarea>
 
-                <% } %> 
+                                        <% } %>
                 </label>
             </div>
-            <input id="file-input" type='file' onchange="readURL(this);" style="display: none;"/>
+            <input id="file-input" type='file' onchange="readURL(this);" style="display: none;" />
             <div class="user_status status_online"></div>
             <div class="icon_change_photo" hidden>
                 <ion-icon name="camera" class="text-xl"></ion-icon>
@@ -74,13 +96,13 @@
                 var reader = new FileReader();
                 reader.onload = function (e) {
                     window.a = e.target.result
-                    axios.post("/cloudupload",{
-                        resim:e.target.result
-                    }).then(response=>{
+                    axios.post("/cloudupload", {
+                        resim: e.target.result
+                    }).then(response => {
                         if (response.data.status == true) {
                             document.getElementById("tikla").style.display = "block"
                         } else {
-                            
+
                         }
                     })
                     $('#blah')
@@ -93,28 +115,28 @@
         }
 
         function kaydet() {
-            axios.post("/probio",{
-                photo:window.a,
-            }).then(response=>{
+            axios.post("/probio", {
+                photo: window.a,
+            }).then(response => {
                 if (response.data.status == true) {
-                    swal("Başarılı","Profil bilgileriniz başarıyla değiştirildi.","success")
+                    swal("Başarılı", "Profil bilgileriniz başarıyla değiştirildi.", "success")
                 } else {
-                    
+
                 }
             })
         }
 
         function bioyaz() {
-            axios.post("/bioyaz",{
-                bio:document.getElementById("bio").value
-            }).then(response=>{
+            axios.post("/bioyaz", {
+                bio: document.getElementById("bio").value
+            }).then(response => {
                 if (response.data.status == true) {
-                    swal("Başarılı","Biyografi başarıyla güncellendi.","success")
+                    swal("Başarılı", "Biyografi başarıyla güncellendi.", "success")
                     setTimeout(() => {
                         window.location.reload()
                     }, 1500);
                 } else {
-                    
+
                 }
             })
         }
