--- a/views/front/set/setting.ejs
+++ b/views/front/set/setting.ejs
@@ -1,6 +1,26 @@
 <% layout("../layout") %>
-<%- include ../part/headerflex.ejs  %>
-
+<header
+style="display: flex; height: 50px; padding-left: 2vw; padding-right: 7vw; padding-top: 10px; border-radius: 20px;">
+<% if (user) { %>
+    <div style="flex: 1;">
+        <a href="/setting">
+            <ion-icon name="chevron-back-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon>
+        </a>
+    </div>
+    <% }else{ %>
+        <div style="flex: 2;">
+            <a href="/users/login">
+                <ion-icon name="person-outline" style="color: gray; float: left;" class="text-3xl"></ion-icon>
+            </a>
+        </div>
+        <% } %>
+            <div style="flex: 15;">
+                <h2 class="text-2xl font-semibold" style="margin-top: 0px;"> Bağlantılar<a> </h2>
+            </div>
+            <div style="flex: 2;">
+                
+            </div>
+</header>
     <div class="main_content">
         <div class="mcontainer">
             <span class="badge">
