--- a/views/front/part/footerflex.ejs
+++ b/views/front/part/footerflex.ejs
@@ -24,7 +24,7 @@
         </div>
     <% } %> 
     <div style="flex: 2; align-items: center; justify-content: center;">
-        <ion-icon name="camera-outline" style="color: gray;" class="text-4xl"></ion-icon>
+        <a href="/medya"><ion-icon name="camera-outline" style="color: gray;" class="text-4xl"></ion-icon></a>
     </div>
     <% if (user) { %>
         <% if (user.type == 1 && title == 1) { %>
