--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -1,5 +1,5 @@
 <% layout("../layout") %>
-<%- include ./part/headerflex.ejs  %>
+<%- include ../part/headerflex.ejs  %>
 
         <div class="main_content">
             <div class="mcontainer">
