--- a/views/front/medya/medyaic.ejs
+++ b/views/front/medya/medyaic.ejs
@@ -38,7 +38,7 @@
                                         background-color: #FFCDD2;
                                         border: 1px solid #C62828;
                                         color: #B71C1C;
-                                        text-decoration: none;"> <a href="/hesap">Abone Ol</a> 
+                                        text-decoration: none;"> <a>Abone Ol</a> 
                                     </span> 
                                 </h3>
                             </h3>
