--- a/views/front/auth/profil.ejs
+++ b/views/front/auth/profil.ejs
@@ -12,6 +12,7 @@
 		background:#2d2d2d;
 	}
 </style>
+<%- include ../part/headerflex.ejs %>
     
     <div class="main_content">
         <div class="mcontainer">
@@ -69,6 +70,11 @@
                     <br>
                     <small>233 Abone</small><br>
                     <%= user.bio %>  <br>
+                    <span style="float: right; text-align: right;"><ion-icon name="caret-down-outline" class="text-2xl"></ion-icon></span>
+                    <br>
+                    <i class="fa fa-twitter"></i> : <%= user.social.twitter %> <br>
+                    <i class="fa fa-facebook"></i> : <%= user.social.facebook %> <br>
+                    <i class="fa fa-linkedin"></i> : <%= user.social.linkedin %> 
                    
                 </div>
                 <div class="flex justify-between lg:border-t flex-col-reverse lg:flex-row" style="padding-top: 10px;">
