--- a/views/front/bildirim.ejs
+++ b/views/front/bildirim.ejs
@@ -1,121 +1,25 @@
 <% layout("layout") %>
-<%- include ./part/header2.ejs %> 
+<%- include ./part/headerflex.ejs %> 
 
     <div class="main_content">
-        <br>
-        <div class="mcontainer" style="margin:5px;">
-            <!-- <div class="bg-white rounded-2xl -mt-4"> 
-                <h3 class="text-lg font-semibold">Bildirimler</h3>
-            </div> -->
-            <div class="lg:flex lg:mt-8 mt-4 lg:space-x-8">
-                <div class="lg:w-12/12 space-y-6" style="border: 1px solid #03A9F4; border-radius: 20px; padding: 5px">
-                    <ul class="space-y-6" >
-                            <li>
-                                <a href="">
-                                    <div class="flex items-start pl-3 space-x-4">
-                                        <!-- <img src="../../../front/images/avatars/avatar-2.jpg" style="width: 40px; height: 40px;" class="rounded-full"> -->
-                                        <div class="flex-1">
-                                            <table>
-                                                <tr>
-                                                    <td><img src="../../../newpan.png" alt="" class="logo_mobile w-32"> </td>
-                                                    <td style="padding-top: 15px;"></td>
-                                                </tr>
-                                            </table>                                        
-                                            <h3 class="text-lg font-semibold">
-                                               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis quasi adipisci distinctio alias harum corrupti aut laudantium pariatur, culpa voluptatibus, dolorum repellat explicabo.
-                                            </h3>
-                                            <!-- <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html">Abdullah Bektaş</span>
-                                            </p> -->
-                                            <!-- <div class="row" style="margin-top: -9px; margin-left: 1px;">
-                                                <table>
-                                                    <tr>
-                                                        
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon name="logo-facebook"></ion-icon>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon name="logo-whatsapp" style="padding-left: 7vw;"></ion-icon>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon name="logo-twitter" style="padding-left: 7vw;"></ion-icon>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 7vw;" 
-                                                                name="heart-outline"></ion-icon>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 7vw;"  name="chatbubble-ellipses-outline"></ion-icon>
-
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <b>
-                                                            <ion-icon  style="color:#03A9F4; font-weight:bolder; padding-left: 7vw;" name="checkmark-outline"></ion-icon>
-
-                                                            </b>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon  style="padding-left: 7vw;" name="ellipsis-vertical"></ion-icon>
-                                                            <span class="text-sm"></span>
-                                                        </div>
-                                                    </td>
-                                                    </tr>
-                                                </table>
-                                        </div>                                         -->
-                                    </div>
-                                    </div>
-                                    
-                                </a>
-                            </li>
-                            <!-- <hr style="margin-top: -0px;"> -->
-                    </ul>
+        <div class="mcontainer">
+            <div style="display: flex; flex-direction: row;">
+                <div style="flex:1; align-items: center; justify-content: center; padding-left: 5vw;"><ion-icon name="notifications-outline" class="text-2xl"></ion-icon> </div>
+                <div style="flex:10">
+                    <img src="https://via.placeholder.com/50" style="border-radius: 50px; margin-bottom: 6px;">
+                    <p style="margin-top: -11px;"> <b>Sistem mesajı</b> asdasd asdasdasd </p>
+                    <p style="line-height: 1.2;"> <small>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis unde fuga necessitatibus, atque corrupti quos eos</small> </p>
                 </div>
-                <!-- <div class="lg:w-5/12 space-y-6">
-                  
-                    <div class="widget">
-                        <h4 class="text-2xl mb-3 font-semibold"> Hakkında </h4>
-                        <ul class="text-gray-600 space-y-4">
-                            <li class="flex items-center space-x-2"> 
-                                <ion-icon name="home-sharp" class=" rounded-full bg-gray-200 text-xl p-1.5 mr-3"></ion-icon>
-                                <strong> İstanbul'da bir yer . .   </strong>
-                            </li>
-                            <li class="flex items-center space-x-2"> 
-                                <ion-icon name="globe" class=" rounded-full bg-gray-200 text-xl p-1.5 mr-3"></ion-icon>
-                                <strong> www.ornek.com  </strong>
-                            </li>
-                            <li class="flex items-center space-x-2"> 
-                                <ion-icon name="logo-instagram" class=" rounded-full bg-gray-200 text-xl p-1.5 mr-3"></ion-icon>
-                                <strong> @ornekkisi  </strong>
-                            </li>
-                            <li class="flex items-center space-x-2">
-                                <ion-icon name="logo-facebook" class=" rounded-full bg-gray-200 text-xl p-1.5 mr-3"></ion-icon>
-                                <strong> <a href="https://google.com">Abdullah Bektaş</a> </strong>
-                            </li>   
-                            <li class="flex items-center space-x-2">
-                            <ion-icon name="logo-twitter" class=" rounded-full bg-gray-200 text-xl p-1.5 mr-3"></ion-icon>
-                                <strong> <a href="https://google.com">Abdullah Bektaş</a> </strong>
-                            </li>   
-                        </ul></div>
-                    </div> -->
             </div>
-
+            <hr>
+            <div style="display: flex; flex-direction: row; padding-top: 6px;">
+                <div style="flex:1; align-items: center; justify-content: center; padding-left: 5vw;"><ion-icon name="star-outline" class="text-2xl"></ion-icon></div>
+                <div style="flex:10">
+                    <img src="https://via.placeholder.com/50" style="border-radius: 50px; margin-bottom: 6px;">
+                    <p style="margin-top: -11px;"> <b>Sistem mesajı</b> asdasd asdasdasd </p>
+                    <p style="line-height: 1.2;"> <small>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis unde fuga necessitatibus, atque corrupti quos eos</small> </p>
+                </div>
+            </div>
+            <hr>
         </div>
     </div>
