--- a/views/back/layout.ejs
+++ b/views/back/layout.ejs
@@ -124,6 +124,9 @@
                                     </a>
                                     <ul class="nav nav-children">
                                         <li>
+                                            <a href="/admin/bildirim">Bildirim</a>
+                                        </li>
+                                        <li>
                                             <a href="/admin/sozluk">Sözlük</a>
                                         </li>
                                         <li>
