--- a/views/back/index.ejs
+++ b/views/back/index.ejs
@@ -14,7 +14,7 @@
                             <div class="summary">
                                 <h4 class="title">Üyeler</h4>
                                 <div class="info">
-                                    <strong class="amount">0</strong>
+                                    <strong class="amount"> <%= uye %> </strong>
                                 </div>
                             </div>
                             <div class="summary-footer">
@@ -31,14 +31,14 @@
                     <div class="widget-summary">
                         <div class="widget-summary-col widget-summary-col-icon">
                             <div class="summary-icon bg-tertiary">
-                                <i class="fa fa-shopping-cart"></i>
+                                <i class="fa fa-user"></i>
                             </div>
                         </div>
                         <div class="widget-summary-col">
                             <div class="summary">
-                                <h4 class="title">Siparişler</h4>
+                                <h4 class="title">Yazarlar</h4>
                                 <div class="info">
-                                    <strong class="amount">0</strong>
+                                    <strong class="amount"> <%= yazar %> </strong>
                                 </div>
                             </div>
                             <div class="summary-footer">
@@ -62,7 +62,7 @@
                             <div class="summary">
                                 <h4 class="title">Sözlük</h4>
                                 <div class="info">
-                                    <strong class="amount">0</strong>
+                                    <strong class="amount"> <%= sozluk %> </strong>
                                 </div>
                             </div>
                             <div class="summary-footer">
