--- a/views/back/layout.ejs
+++ b/views/back/layout.ejs
@@ -124,9 +124,6 @@
                                     </a>
                                     <ul class="nav nav-children">
                                         <li>
-                                            <a href="/admin/bildirim">Bildirim</a>
-                                        </li>
-                                        <li>
                                             <a href="/admin/sozluk">Sözlük</a>
                                         </li>
                                         <li>
@@ -140,9 +137,9 @@
                                         <span>Ayarlar</span>
                                     </a>
                                     <ul class="nav nav-children">
-                                        <!-- <li>
-                                            <a href="/admin/kategori">Kategori</a>
-                                        </li> -->
+                                        <li>
+                                            <a href="/admin/bildirim">BİLDİRİM</a>
+                                        </li>
                                         <li>
                                             <a href="">SSS</a>
                                         </li>
